Fix Support button z-index

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -17,6 +17,7 @@
 
   .support-button {
     position: absolute;
+    z-index: 10;
     right: 16px;
     bottom: 16px;
   }
